sort.baseball.SelectBaseball.scala.error
Compilation error:
SelectBaseball:45: error: not found: value baseJ
  move(baseJ-1,0)
       ^